<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:contxt=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="602dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        tools:layout_editor_absoluteX="0dp">


        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_entrada_texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endereco_de_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/campos_texto_arredondados"
                        android:drawableLeft="@drawable/ic_email"
                        android:hint="@string/_digite_seu_email"
                        android:inputType="textEmailAddress"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_entrada_texto2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/senha_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/campos_texto_arredondados"
                        android:drawableLeft="@drawable/ic_chave"
                        android:hint="@string/_escolha_uma_senha"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_entrada_texto3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nome_registro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/campos_texto_arredondados"
                        android:drawableLeft="@drawable/ic_usuario"
                        android:hint="@string/digite_nome"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_entrada_texto4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descricao_registro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/campos_texto_arredondados"
                        android:drawableLeft="@drawable/ic_descricao"
                        android:hint="Descreva-se"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/dataNascimentoBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_calendario"
                    android:text="@string/selecione_data_nascimento" />

                <TextView
                    android:id="@+id/dataNascimentoTxt"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    android:drawableEnd="@drawable/ic_editar"
                    android:layout_gravity="center"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masculino"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Feminino"/>
                </RadioGroup>

                <Button
                    android:id="@+id/registrar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/botoes_arredondados"
                    android:elevation="7dp"
                    android:text="@string/continuar"
                    android:translationZ="4dp" />

                <TextView
                    android:id="@+id/cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/cancelar_registro" />

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="3dp" />

                <com.github.ybq.android.spinkit.SpinKitView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/barraLoading"
                    style="@style/SpinKitView.Small.DoubleBounce"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="20dp"
                    app:SpinKit_Color="#1dd648"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:SpinKit_Style="DoubleBounce"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>